Update idea64.exe.vmoptions